deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: chapter-summarization-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chapter-summarization
  template:
    metadata:
      labels:
        app: chapter-summarization
    spec:
      volumes:
      - name: google-credentials
        secret:
          secretName: google-credentials
      containers:
      - name: chapter-summarization
        image: daniel135dang/chapter_summarization:1.0.0-86
        ports:
        - containerPort: 6002
        volumeMounts:
        - name: google-credentials
          mountPath: /app/google_credentials.json
          subPath: google_credentials.json
          readOnly: true
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chapter-title-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chapter-title
  template:
    metadata:
      labels:
        app: chapter-title
    spec:
      volumes:
      - name: google-credentials
        secret:
          secretName: google-credentials
      containers:
      - name: chapter-title
        image: daniel135dang/chapter_title:1.0.0-86
        ports:
        - containerPort: 6003
        volumeMounts:
        - name: google-credentials
          mountPath: /app/google_credentials.json
          subPath: google_credentials.json
          readOnly: true
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: page-count-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: page-count
  template:
    metadata:
      labels:
        app: page-count
    spec:
      volumes:
      - name: google-credentials
        secret:
          secretName: google-credentials
      containers:
      - name: page-count
        image: daniel135dang/page_count:1.0.0-86
        ports:
        - containerPort: 6004
        volumeMounts:
        - name: google-credentials
          mountPath: /app/google_credentials.json
          subPath: google_credentials.json
          readOnly: true
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: table-of-content-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: table-of-content
  template:
    metadata:
      labels:
        app: table-of-content
    spec:
      volumes:
      - name: google-credentials
        secret:
          secretName: google-credentials
      containers:
      - name: table-of-content
        image: daniel135dang/table_of_content:1.0.0-86
        ports:
        - containerPort: 6005
        volumeMounts:
        - name: google-credentials
          mountPath: /app/google_credentials.json
          subPath: google_credentials.json
          readOnly: true
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: word-frequency-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: word-frequency
  template:
    metadata:
      labels:
        app: word-frequency
    spec:
      volumes:
      - name: google-credentials
        secret:
          secretName: google-credentials
      containers:
      - name: word-frequency
        image: daniel135dang/word_frequency:1.0.0-86
        ports:
        - containerPort: 6006
        volumeMounts:
        - name: google-credentials
          mountPath: /app/google_credentials.json
          subPath: google_credentials.json
          readOnly: true
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: citation-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: citation
  template:
    metadata:
      labels:
        app: citation
    spec:
      volumes:
      - name: google-credentials
        secret:
          secretName: google-credentials
      containers:
      - name: citation
        image: daniel135dang/citation:1.0.0-86
        ports:
        - containerPort: 6007
        volumeMounts:
        - name: google-credentials
          mountPath: /app/google_credentials.json
          subPath: google_credentials.json
          readOnly: true
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: table-figure-detection-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: table-figure-detection
  template:
    metadata:
      labels:
        app: table-figure-detection
    spec:
      volumes:
      - name: google-credentials
        secret:
          secretName: google-credentials
      containers:
      - name: table-figure-detection
        image: daniel135dang/table_figure_detection:1.0.0-86
        ports:
        - containerPort: 6008
        volumeMounts:
        - name: google-credentials
          mountPath: /app/google_credentials.json
          subPath: google_credentials.json
          readOnly: true
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grammar-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grammar
  template:
    metadata:
      labels:
        app: grammar
    spec:
      volumes:
      - name: google-credentials
        secret:
          secretName: google-credentials
      containers:
      - name: grammar
        image: daniel135dang/grammar:1.0.0-86
        ports:
        - containerPort: 6009
        volumeMounts:
        - name: google-credentials
          mountPath: /app/google_credentials.json
          subPath: google_credentials.json
          readOnly: true
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: format-check-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: format-check
  template:
    metadata:
      labels:
        app: format-check
    spec:
      volumes:
      - name: google-credentials
        secret:
          secretName: google-credentials
      containers:
      - name: format-check
        image: daniel135dang/format_check:1.0.0-86
        ports:
        - containerPort: 6010
        volumeMounts:
        - name: google-credentials
          mountPath: /app/google_credentials.json
          subPath: google_credentials.json
          readOnly: true
---
