rest-client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client-frontend
      tier: frontend
  template:
    metadata:
      labels:
        app: client-frontend
        tier: frontend
    spec:
      containers:
      - name: client
        image: daniel135dang/client:1.0.0-66
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: app-config-volume
          mountPath: /app/config.js
          subPath: config.js
          readOnly: true
      volumes:
      - name: app-config-volume
        configMap:
          name: app-config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rest-backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rest-backend
      tier: backend
  template:
    metadata:
      labels:
        app: rest-backend
        tier: backend
    spec:
      volumes:
      - name: rest-file
        persistentVolumeClaim:
          claimName: rest-file-pvc
      - name: google-credentials
        secret:
          secretName: google-credentials
      containers:
      - name: rest-backend
        image: daniel135dang/rest:1.0.0-10
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: rest-file
          mountPath: /app/rest/files
        - name: google-credentials
          mountPath: /app/google_credentials.json
          subPath: google_credentials.json
          readOnly: true
---
apiVersion: v1
kind: Service
metadata:
  name: client-frontend-service
  labels:
    app: client-frontend
    tier: frontend
spec:
  type: LoadBalancer
  selector:
    app: client-frontend
    tier: frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: rest-service
  labels:
    app: rest-backend
    tier: backend
spec:
  # type: LoadBalancer
  selector:
    app: rest-backend
    tier: backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
