service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chapter-summarization-service
spec:
  selector:
    app: chapter-summarization
  ports:
    - name: chapter-summarization
      protocol: TCP
      port: 5006
      targetPort: 5006
---
apiVersion: v1
kind: Service
metadata:
  name: chapter-title-service
spec:
  selector:
    app: chapter-title
  ports:
    - name: chapter-title
      protocol: TCP
      port: 5001
      targetPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: citation-service
spec:
  selector:
    app: citation
  ports:
    - name: citation
      protocol: TCP
      port: 5007
      targetPort: 5007
---
apiVersion: v1
kind: Service
metadata:
  name: client-frontend-service
spec:
  type: LoadBalancer
  selector:
    app: client-frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: format-check-service
spec:
  selector:
    app: format-check
  ports:
    - name: format-check
      protocol: TCP
      port: 5002
      targetPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: page-count-service
spec:
  selector:
    app: page-count
  ports:
    - name: page-count
      protocol: TCP
      port: 5003
      targetPort: 5003
---
apiVersion: v1
kind: Service
metadata:
  name: rest-service
spec:
  selector:
    app: rest-service
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: table-of-content-service
spec:
  selector:
    app: table-of-content
  ports:
    - name: table-of-content
      protocol: TCP
      port: 5004
      targetPort: 5004
---
apiVersion: v1
kind: Service
metadata:
  name: word-frequency-service
spec:
  selector:
    app: word-frequency
  ports:
    - name: word-frequency
      protocol: TCP
      port: 5005
      targetPort: 5005
